--- a/Semana 2 - CSS e Bulma/Dia-01/css/style.css
+++ b/Semana 2 - CSS e Bulma/Dia-01/css/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: #ffffff;
-    background-image: url(./Dia-01-bg.jpg);
+    background-image: url(./assets/bg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
